# Revo-Backend

./: .cursorrules  .env  .env.backup  .env.example  .gitignore  Dockerfile  Makefile  PR_DOCUMENTATION.md  PULL_REQUEST.md  README.md  alembic.ini  docker-compose.yml  dump.rdb  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  rotate-secrets.ps1  setup.cfg  test-database.sqlite  tsconfig.json
.github/: pull_request_template.md
.github /: pull_request_template.md
.github/workflows/: docs-ci-cd.yml
alembic/: README_MIGRATIONS.md  env.py
alembic/versions/: .gitkeep  001_create_users_table.py  002_create_farmers_and_locations.py  002_create_farmers_table.py
app/: main.py
app/api/: __init__.py  auth.py  farmers.py  notifications.py  users.py
app/core/: config.py  database.py  dependencies.py  middleware.py  security.py
app/graphql/: schema.py
app/graphql/resolvers/: __init__.py  user_resolver.py
app/graphql/types/: __init__.py  user_type.py
app/models/: __init__.py  base.py
app/models/farmers/: __init__.py  farmer.py
app/models/orders/: __init__.py
app/models/products/: __init__.py
app/models/shared/: __init__.py  location.py  notification.py
app/models/users/: __init__.py  user.py
app/schemas/: __init__.py  farmer.py  location.py  notification.py  user.py
app/services/: __init__.py  auth_service.py  farmer_service.py  notification_service.py  notification_templates.py
config/docker/: README.md  docker-compose.yml
config/docker/secrets/: db_password.txt  jwt_secret.txt  ssl_cert.pem  ssl_key.pem  vault_token.txt
config/docker/security/: rotate-secrets.ps1  rotate-secrets.sh  security-policy.yml
examples/: notification_examples.py
init-scripts/: 01-init.sql
scripts/: init_notification_templates.py  setup.sh  start.sh
src/: app.controller.ts  app.module.ts  main.ts
src/config/: database.config.ts  jwt.config.ts  storage.config.ts  swagger.config.ts
src/database/backup/: README.md  backup.module.ts
src/database/backup/scripts/: backup.bat  backup.sh  restore.bat  restore.sh
src/database/backup/services/: backup.service.ts
src/database/config/: backup.config.ts  database.config.ts  seed.config.ts
src/database/entities/: base.entity.ts
src/database/entities/interfaces/: soft-delete.interface.ts
src/database/seeds/: README.md  seed.command.ts  seed.module.ts
src/database/seeds/data/: products.data.ts  users.data.ts
src/database/seeds/factories/: base.factory.ts  order-item.factory.ts  order.factory.ts  product.factory.ts  user.factory.ts
src/database/seeds/runners/: base.seeder.ts  main.seeder.ts  order.seeder.ts  product.seeder.ts  user.seeder.ts
src/docs/: openapi-spec.json  ruleset.yaml
src/docs/config/: api-version.config.ts  security.config.ts  swagger.config.ts
src/docs/decorators/: api-response.decorator.ts
src/docs/dtos/: dtos.md
src/docs/enums/: enums.md
src/docs/interfaces/: documentation.interface.ts
src/docs/schemas/: schemas.md  schemas.ts
src/docs/scripts/: validate-docs.ts
src/docs/security/auth-flows/: README.md
src/docs/security/config/: security..config.ts
src/docs/security/examples/: auth-examples.json  auth-examples.md  security-warnings.md
src/docs/security/schemas/: README.md  rate-limiting.md
src/docs/tests/examples/: order-item.example.json  (+3 more)
src/docs/utils/: generate-json-schema.ts
src/docs/validators/: validators.md
src/filters/: http-exception.filter.ts
src/modules/auth/: auth.controller.spec.ts  auth.module.ts
src/modules/logging/: logging.module.ts
src/modules/orders/: orders.module.ts
src/modules/products/: products.module.ts
src/redis/: redis.module.ts
src/shared/entities/: product.entity.ts
src/types/: stoplight-spectral-ruleset-bundler.d.ts
test/: app.e2e-spec.ts  product.controller.e2e-spec.ts
tests/: conftest.py  test_auth.py  test_farmer.py  test_farmer_service.py  test_farmers_api.py  test_graphql_users.py  test_location_model.py  test_models.py  test_users.py
(+75 files in other folders)
